--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <h2><a href="recipes/meatloaf.html">1. easy Meatloaf</a></h2>
+    <ul>
+   <li><a href="recipes/meatloaf.html"><img src="recipes-images/meatloaf.jpg"></a></li>
+   <li><a href="recipes/pesto pasta salad.html"><img src="recipes-images/pesto.jpg"></a></li>
+   <li><a href="recipes/Skillet Shrimp Fajitas with Cilantro-Lime Cream.html"><img src="recipes-images/shrimp.jpg"></a></li>
+      </ul>
   </body>
-  
+</html>
